k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: expensy
  labels:
    app: expensy
    owner: pablo
