k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pablo-backend
  namespace: expensy
  labels:
    app: backend
    owner: pablo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        owner: pablo
    spec:
      containers:
        - name: backend
          image: docker.io/prouan/expensy-backend:latest
          ports:
            - containerPort: 8706
          readinessProbe:
            httpGet:
              path: /api/expenses
              port: 8706
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/expenses
              port: 8706
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: expensy
spec:
  type: LoadBalancer   # <-- was ClusterIP
  ports:
  - port: 8706
    targetPort: 8706
  selector:
    app: backend
