k8s/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pablo-redis
  namespace: expensy
  labels:
    app: pablo-redis
    owner: pablo
spec:
  serviceName: pablo-redis
  replicas: 1
  selector:
    matchLabels:
      app: pablo-redis
  template:
    metadata:
      labels:
        app: pablo-redis
        owner: pablo
    spec:
      containers:
        - name: redis
          image: redis:7
          command: ["sh", "-c", "redis-server --requirepass ${REDIS_PASSWORD}"]
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: pablo-redis
  namespace: expensy
  labels:
    app: pablo-redis
    owner: pablo
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: pablo-redis
